maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:6: error: illegal start of simple expression
      case 0 =>  if (!estFaceMur());avance()
                                   ^